# aoc_2023

./: CMakeLists.txt  LICENSE.md  README.md
common/: CMakeLists.txt  inputfile.cpp  inputfile.hpp
day01/: CMakeLists.txt  README.md  solution.cpp  solution.hpp
day02/: CMakeLists.txt  README.md  solution.cpp  solution.hpp
doctest/: CMakeLists.txt
template/: CMakeLists.txt  main.cpp  solution.cpp
